--- a/tests/test_files/sample_template1.tex
+++ b/tests/test_files/sample_template1.tex
@@ -3,12 +3,21 @@
     \section{Render Template}
     This is an example rendering template meant to be processed by the jinja template engine.
 
-    \section{\pyvar{name_1}}
+    \section{\EXPR{name_1}}
     \begin{itemize}
-        \pyblock{ for i in range(5) }
-        \item This is the \pyvar{i}-th item
-        \pyblock{ endfor }
+        \BLOCK{ for i in range(5) }
+        \item This is the \EXPR{i+1}-th item
+        \BLOCK{ endfor }
 
+    \end{itemize}
+
+    \#{The contents of this block should be removed}
+
+    \section{\EXPR{data2.name + " Addition"}}
+    \begin{itemize}
+        \BLOCK{ for value in data2['items'] }
+        \item Item \EXPR{value}
+        \BLOCK{ endfor }
     \end{itemize}
 
 \end{document}
