--- a/tests/test_files/sample_template1.tex
+++ b/tests/test_files/sample_template1.tex
@@ -11,7 +11,7 @@
 
     \end{itemize}
 
-    \#{The contents of this block should be removed}
+    \#{The contents of this block will be removed}
 
     \section{\EXPR{data2.name + " Addition"}}
     \begin{itemize}
